--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,20 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 27
     buildToolsVersion "27.0.3"
     defaultConfig {
         applicationId "com.example.jh.lingdu"
-        minSdkVersion 15
-        targetSdkVersion 25
+        minSdkVersion 16
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        ndk {
+            // 设置支持的SO库架构
+            abiFilters 'armeabi' //, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
+        }
+
     }
     buildTypes {
         release {
@@ -20,11 +25,59 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support:appcompat-v7:25.3.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
+    // SmartRefreshLayout 下拉刷新控件
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.5.1'
+    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.5.1'
+    //没有使用特殊Header，可以不加这行
+    // okhttp3
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    // retrofit2
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:retrofit-converters:2.4.0'
+    implementation 'com.squareup.retrofit2:retrofit-adapters:2.4.0'
+    // rxjava2
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    // butterknife
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    // 其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.2.0
+    implementation 'com.tencent.bugly:crashreport:latest.release'
+    // glide
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    // rollviewpager 轮播图
+    implementation 'com.jude:rollviewpager:1.4.6'
+    //  DatePicker 日期选择控件
+    implementation 'cn.aigestudio.datepicker:DatePicker:2.2.0'
+    // 可扩展组件
+    implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
+    // circleimageview 圆角图片控件
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    // easypermissions 权限申请
+    implementation 'pub.devrel:easypermissions:1.3.0'
+    // bottomsheet
+    implementation 'com.flipboard:bottomsheet-core:1.5.3'
+    implementation 'com.flipboard:bottomsheet-commons:1.5.3' // optional
+    // 果冻肉效果的Toolbar
+    implementation 'com.github.yalantis:jellytoolbar:v1.0'
+    // MaterialSearchBar 搜索框
+    implementation 'com.github.mancj:MaterialSearchBar:0.7.6'
+    // 显示Loading动画
+    implementation 'com.github.ybq:Android-SpinKit:1.1.0'
+    // 跑马灯效果的library
+    implementation 'com.gongwen:marqueelibrary:1.1.3'
+    // 漂亮的引导页
+    implementation 'com.github.apl-devs:appintro:v4.2.3'
+    // BaseRecyclerViewAdapterHelper（一米阅读采用此框架）
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
+
 }
